--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<html>
 
 <head>
   <!-- Basic -->
@@ -36,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
-            <img th:src="@{images/logo.jpg}" alt="">
+            <img src="images/logo.jpg" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,16 +47,16 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" th:href="@{/}">Inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
                 </li> 
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/usuario}">Usuario </a>
+                  <a class="nav-link" href="usuario.html">Usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/vehiculo}">Vehiculo</a>
+                  <a class="nav-link" href="vehiculo.html">Vehiculo </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/estacionamientos}"><em>estacionamiento</em></a>
+                  <a class="nav-link" href="estacionamiento.html">  <em>estacionamiento</em></a>
                 </li>
               </ul>
             </div>
@@ -532,7 +532,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +51 931375082
+                +02 1234567890
               </p>
             </div>
           </div>
