--- a/src/main/resources/templates/estacionamiento.html
+++ b/src/main/resources/templates/estacionamiento.html
@@ -135,7 +135,7 @@
   <!-- footer section  SECCION DE  -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2024 Todos los derechos reservados
+      &copy; 2024 Todos los derechos
       <a href="https://html.design/">Free Html Templates</a>
     </p>
   </section>
