--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,17 +15,17 @@
   <title>Naviepics</title>
 
   <!-- slider stylesheet -->
-  <link rel="stylesheet" type="text/css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css]" />
+  <link rel="stylesheet" type="text/css" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css}" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" th:href="@{css/bootstrap.css}" />
 
   <!-- fonts style -->
   <link th:href="@{https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap}" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link th:href="@{css/style.css}" rel="stylesheet" />
+  <link th:href="@{/css/style.css}" rel="stylesheet" />
   <!-- responsive style -->
-  <link th:ref="@{css/responsive.css}" rel="stylesheet" />
+  <link th:ref="@{/css/responsive.css}" rel="stylesheet" />
 </head>
 
 <body>
@@ -46,16 +46,16 @@
             <div class="d-flex mx-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" th:href="@{/}">inicio <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" th:href="@{/}">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/usuario}">usuario </a>
+                  <a class="nav-link" th:href="@{/usuario}">Usuario </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/vehiculo}"> vehiculo</a>
+                  <a class="nav-link" th:href="@{/vehiculo}"> Vehiculo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/estacionamientos}"> <em>estacionamiento</em></a>
+                  <a class="nav-link" th:href="@{/estacionamientos}"> <em>Estacionamiento</em></a>
                 </li>
               </ul>             
             </div>
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/carro.png" alt="">
+                    <img th:src="@{/images/carro.png}" alt="">
                   </div>
                 </div>
               </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img th:src="@{images/reservado.png" alt="">
+                    <img th:src="@{images/reservado.png}" alt="">
                   </div>
                 </div>
               </div>
@@ -138,7 +138,7 @@
           </div>
                 <div class="col-md-6">
                   <div class="slider_img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img th:src="@{/images/slider-img.png}" alt="">
                   </div>
                 </div>
               </div>
@@ -158,7 +158,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="img-box">
-            <img src="images/persona.png" alt="">
+            <img th:src="@{/images/persona.png}" alt="">
           </div>
         </div>
         <div class="col-md-6">
@@ -199,7 +199,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="img_box">
-                  <img th:src="@{images/s-1.png}" alt="">
+                  <img th:src="@{/images/s-1.png}" alt="">
                 </div>
                 <div class="detail_box">
                   <h6>
@@ -268,16 +268,16 @@
         <img th:src="@{/images/g-1.png}" alt="">
       </div>
       <div class="img_box box-2">
-        <img src="@{/images/g-2.png}" alt="">
+        <img th:src="@{/images/g-2.png}" alt="">
       </div>
       <div class="img_box box-3">
-        <img src="@{/images/g-3.png}" alt="">
+        <img th:src="@{/images/g-3.png}" alt="">
       </div>
       <div class="img_box box-4">
-        <img src="@{/images/g-4.png}" alt="">
+        <img th:src="@{/images/g-4.png}" alt="">
       </div>
       <div class="img_box box-5">
-        <img src="@{/images/g-5.png}" alt="">
+        <img th:src="@{/images/g-5.png}" alt="">
       </div>
     </div>
   </section>
