--- a/src/main/resources/templates/usuario.html
+++ b/src/main/resources/templates/usuario.html
@@ -13,33 +13,32 @@
 
   <title>Naviepics</title>
 
-  <link rel="stylesheet" href="css/usuario.css">
+  <link rel="stylesheet" th:href="@{/css/usuario.css}">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    th:href="@{https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css}" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}" />
 
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+  <link th:href="@{https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap}" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="css/estacionamiento.css" rel="stylesheet" />
+  <link th:href="@{/css/estacionamiento.css}" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link th:href="@{/css/responsive.css}" rel="stylesheet" />
 
   
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-    <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}">
+    <link rel="canonical" th:href="@{https://getbootstrap.com/docs/5.3/examples/product/}">
+    <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@docsearch/css@3}">
+    <link th:href="@{/docs/5.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link th:href="@{https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap}" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="preconnect" th:href="${'https://fonts.googleapis.com' + fontUrl}" />
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link th:href="@{https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css}" rel="stylesheet" />
   
 </head>
 
@@ -73,14 +72,14 @@
                 <i class='bx bxl-linkedin'></i>
             </div>
             <p> Puedes ingresar por las siguientes cuentas</p>
-            <form class="forms">
+            <form class="forms" th:action="@{/inicioSesion/iniciar}" th:object="${usuario}" method="post">
                 <label>
                     <i class='bx bx-envelope'></i>
-                    <input type="email" placeholder="Correo Electronico">
+                    <input type="email" th:field="*{email}" placeholder="Correo Electronico"/>
                 </label>
                 <label>
                     <i class='bx bx-lock-alt'></i>
-                    <input type="password" placeholder="Contraseña">
+                    <input type="password" th:field="*{password}"required placeholder="Contraseña"/>
                 </label>
                 <input type="submit" placeholder="Enviar">
             </form>
