--- a/src/main/resources/templates/vehiculo.html
+++ b/src/main/resources/templates/vehiculo.html
@@ -16,30 +16,29 @@
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
+    th:href="@{https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css}" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}" />
   <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap" rel="stylesheet">
+  <link th:href="@{https://fonts.googleapis.com/css?family=Dosis:400,500|Poppins:400,700&display=swap}" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link th:href="@{css/style.css}" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link th:href="@{/css/responsive.css}" rel="stylesheet" />
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/usuario.css">
+  <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+  <link rel="stylesheet" th:href="@{/css/usuario.css}">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-  <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css}">
+  <link rel="canonical" th:href="@{https://getbootstrap.com/docs/5.3/examples/product/}">
+  <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@docsearch/css@3}">
+  <link th:href="@{/docs/5.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link th:href="@{https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap}" rel="stylesheet">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+  <link rel="preconnect" th:href="@{https://fonts.googleapis.com}">
+  <link rel="preconnect" th:href="@{https://fonts.gstatic.com}" crossorigin>
+  <link th:href="@{https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css}" rel='stylesheet'>
 
 
 
@@ -51,8 +50,8 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.jpg" alt="">
+          <a class="navbar-brand" th:href="@{/}">
+            <img th:src="@{/images/logo.jpg}" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +71,7 @@
                   <a class="nav-link" th:href="@{/vehiculo}">Vehiculo</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" th:href="@{/estacionamientos}"><em>estacionamiento</em></a>
+                  <a class="nav-link" th:href="@{/estacionamientos}"><em>Estacionamiento</em></a>
                 </li>
               </ul>
             </div>
@@ -88,24 +87,24 @@
   <section class="gallery-section layout_padding">
     <div class="container">
       <h2>
-        Nuestros estacionammientos
+        Nuestros estacionamientos
       </h2>
     </div>
     <div class="container ">
       <div class="img_box box-1">
-        <img src="images/g-1.png" alt="">
+        <img th:src="@{/images/g-1.png}" alt="">
       </div>
       <div class="img_box box-2">
-        <img src="images/g-2.png" alt="">
+        <img th:src="@{/images/g-2.png}" alt="">
       </div>
       <div class="img_box box-3">
-        <img src="images/g-3.png" alt="">
+        <img th:src="@{images/g-3.png}" alt="">
       </div>
       <div class="img_box box-4">
-        <img src="images/g-4.png" alt="">
+        <img th:src="@{images/g-4.png}" alt="">
       </div>
       <div class="img_box box-5">
-        <img src="images/g-5.png" alt="">
+        <img th:src="@{images/g-5.png}" alt="">
       </div>
     </div>
   </section>
@@ -164,13 +163,13 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2019 All Rights Reserved By
-      <a href="images/naviepics.jpeg">NAVIEPICS</a>
+      <a th:href="@{/images/naviepics.jpeg}">NAVIEPICS</a>
     </p>
   </section>
   <!-- footer section -->
 
-  <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <script type="text/javascript" th:src="@{/js/jquery-3.4.1.min.js}"></script>
+  <script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>
 
 </body>
 
